gpu: drm: somc_panel: Add support for DisplayPort
Add support for DisplayPort on SoMC devices through extensional
code and enhancements.

--- a/drivers/gpu/drm/msm/dsi-staging/somc_panel/Kconfig
+++ b/drivers/gpu/drm/msm/dsi-staging/somc_panel/Kconfig
@@ -18,6 +18,13 @@ config SOMC_PANEL_LABIBB
 	---help---
 	LAB/IBB regulators handling for MSM8994 and later generation boards.
 
+config DRM_MSM_DP_SOMC_PANEL
+	depends on DRM_MSM && EXTCON_SOMC_EXTENSION
+	bool "Support for DisplayPort on Sony Xperia"
+	default n
+	---help---
+	Enable additional code for enhancements and support to enable the
+	DisplayPort output through the USB Type-C on Sony Xperia devices.
 
 choice
 	bool "SoMC Panel variant support"
