--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -1,12 +1,12 @@
-# SPDX-License-Identifier: GPL-2.0
-dtb-$(CONFIG_ARCH_QCOM)	+= apq8016-sbc.dtb
-dtb-$(CONFIG_ARCH_QCOM)	+= apq8096-db820c.dtb
-dtb-$(CONFIG_ARCH_QCOM)	+= ipq8074-hk01.dtb
-dtb-$(CONFIG_ARCH_QCOM)	+= msm8916-mtp.dtb
-dtb-$(CONFIG_ARCH_QCOM)	+= msm8992-bullhead-rev-101.dtb
-dtb-$(CONFIG_ARCH_QCOM)	+= msm8994-angler-rev-101.dtb
-dtb-$(CONFIG_ARCH_QCOM)	+= msm8996-mtp.dtb
+ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
+# TRINKET - SOMC Seine
+dtbo-$(CONFIG_MACH_SONY_PDX201) += \
+        trinket-seine-pdx201_generic-overlay.dtbo
 
+trinket-seine-pdx201_generic-overlay.dtbo-base := trinket.dtb
+endif
+
+ifeq ($(CONFIG_BUILD_QCOM_REFERENCE_PLATFORMS),y)
 dtb-$(CONFIG_ARCH_QCS403) += qcs403-iot-sku1.dtb \
 			qcs403-iot-sku2.dtb \
 			qcs403-iot-sku3.dtb \
@@ -352,6 +352,8 @@ dtb-$(CONFIG_ARCH_SDXPRAIRIE) += sdxprairie-rumi.dtb \
 	sa515m-ccard.dtb \
 	sa515m-ccard-pcie-ep.dtb \
 	sa515m-ccard-usb-ep.dtb
+
+endif # CONFIG_BUILD_QCOM_REFERENCE_PLATFORMS
 
 ifeq ($(CONFIG_ARM64),y)
 always		:= $(dtb-y)
