--- a/arch/arm64/boot/dts/qcom/msm-audio-lpass.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm-audio-lpass.dtsi
@@ -470,6 +470,12 @@
 		compatible = "qcom,msm-audio-apr";
 		qcom,subsys-name = "apr_adsp";
 
+		q6core: qcom,q6core-audio {
+			#address-cells = <1>;
+			#size-cells = <1>;
+			compatible = "qcom,q6core-audio";
+		};
+
 		msm_audio_ion: qcom,msm-audio-ion {
 			compatible = "qcom,msm-audio-ion";
 			qcom,smmu-version = <2>;
