arm64: DT: PDX201: Fix include paths for main DTs
Include paths were wrong, as these DTs were initially designed
to be in another folder: fix them.

--- a/arch/arm64/boot/dts/qcom/trinket-seine-pdx201_generic-overlay.dts
+++ b/arch/arm64/boot/dts/qcom/trinket-seine-pdx201_generic-overlay.dts
@@ -15,8 +15,8 @@
 
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/clock/qcom,gcc-trinket.h>
-#include "qcom/trinket-idp.dtsi"
-#include "qcom/trinket-audio-overlay.dtsi"
+#include "trinket-idp.dtsi"
+#include "trinket-audio-overlay.dtsi"
 
 #include "trinket-seine-pdx201_generic.dtsi"
 
