--- a/arch/arm64/boot/dts/qcom/trinket-seine-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/trinket-seine-common.dtsi
@@ -94,7 +94,7 @@
 		disabled-pins = <22 23 28 29 30 31 32 33>;
 	};
 
-	somc_pinctrl: somc_pinctrl {
+	somc_pinctrl: somc_pinctrl@0 {
 		compatible = "somc-pinctrl";
 		pinctrl-names = "platform_common_default",
 				"product_common_default",
@@ -145,8 +145,8 @@
 
 	};
 
-	somc_pinctrl_pmic: somc_pinctrl_pmic {
-		compatible = "somc-pinctrl-pmic";
+	somc_pinctrl_pmic: somc_pinctrl@1 {
+		compatible = "somc-pinctrl";
 		pinctrl-names = "platform_common_default",
 				"product_common_default",
 				"variant_default";
