arm64: DT: Seine: Configure display for Open Devices k4.14
Remove the useless dsi-panel-sofef01_m-fhd-plus.dtsi file,
as we can reuse Bahamut's panel binding with just two overrides.

Also, write configuration for the display in Seine platform as
per somc_panel driver specs.

--- a/arch/arm64/boot/dts/qcom/trinket-seine-pdx201_common.dtsi
+++ b/arch/arm64/boot/dts/qcom/trinket-seine-pdx201_common.dtsi
@@ -46,3 +46,7 @@
 #include "trinket-seine-display.dtsi"
 #include "charger-seine-common.dtsi"
 #include "charger-seine-pdx201.dtsi"
+
+&sde_dsi_seine_panels {
+	qcom,dsi-panel = <&dsi_4>;
+};
