--- a/arch/arm64/boot/dts/qcom/trinket-seine-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/trinket-seine-common.dtsi
@@ -467,6 +467,9 @@
 &qupv3_se1_i2c {
 	pinctrl-0 = <&sm_gpio_4 &sm_gpio_5>;
 	pinctrl-1 = <&sm_gpio_4_suspend &sm_gpio_5_suspend>;
+
+	/delete-node/ nq@28;
+
 	status = "okay";
 };
 
@@ -674,9 +677,17 @@
 };
 
 &qupv3_se2_i2c {
-		pinctrl-0 = <&sm_gpio_6 &sm_gpio_7>;
-		pinctrl-1 = <&sm_gpio_6_suspend &sm_gpio_7_suspend>;
-		status = "okay";
+	pinctrl-0 = <&sm_gpio_6 &sm_gpio_7>;
+	pinctrl-1 = <&sm_gpio_6_suspend &sm_gpio_7_suspend>;
+	status = "okay";
+
+	synaptics_tcm@20 {
+		status = "disabled";
+	};
+
+	himax_ts@48 {
+		status = "disabled";
+	};
 };
 
 &tlmm {
