arm64: DT: Seine-display: Fix DSI connector phandle
The DSI connector here on TRINKET based DTs has phandle named
"mdss_dsi0", not "sde_dsi0".

--- a/arch/arm64/boot/dts/qcom/trinket-seine-display.dtsi
+++ b/arch/arm64/boot/dts/qcom/trinket-seine-display.dtsi
@@ -103,7 +103,7 @@
 };
 
 &mdss_mdp {
-	connectors = <&sde_wb &sde_dsi0 &dsi_panel_cmd_display>;
+	connectors = <&sde_wb &mdss_dsi0 &dsi_panel_cmd_display>;
 };
 
 /* Disable/remove everything default, we use our own */
