--- a/arch/arm64/boot/dts/qcom/trinket-seine-pdx201_generic-overlay.dts
+++ b/arch/arm64/boot/dts/qcom/trinket-seine-pdx201_generic-overlay.dts
@@ -15,6 +15,7 @@
 
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/clock/qcom,gcc-trinket.h>
+#include "trinket-qupv3.dtsi"
 #include "trinket-idp.dtsi"
 #include "trinket-audio-overlay.dtsi"
 
