--- a/arch/arm64/boot/dts/qcom/trinket.dtsi
+++ b/arch/arm64/boot/dts/qcom/trinket.dtsi
@@ -603,17 +603,21 @@
 	ranges = <0 0 0 0xffffffff>;
 	compatible = "simple-bus";
 
-	intc: interrupt-controller@f200000 {
-		compatible = "arm,gic-v3";
-		#interrupt-cells = <3>;
-		interrupt-controller;
-		interrupt-parent = <&intc>;
-		#redistributor-regions = <1>;
-		redistributor-stride = <0x0 0x20000>;
-		reg = <0xf200000 0x10000>,     /* GICD */
-		      <0xf300000 0x100000>;    /* GICR * 8 */
-		interrupts = <1 9 4>;
-	};
+        intc: interrupt-controller@f200000 {
+                compatible = "arm,gic-v3";
+                reg = <0x0f200000 0x10000>, /* GICD */
+                      <0x0f300000 0x100000>;      /* GICR * 8 */
+                #interrupt-cells = <3>;
+                #address-cells = <1>;
+                #size-cells = <1>;
+                ranges;
+                interrupt-controller;
+                #redistributor-regions = <1>;
+                redistributor-stride = <0x0 0x20000>;
+                interrupts = <1 9 4>;
+                interrupt-parent = <&intc>;
+                arm,qgicv3-plat-sdm660-quirks;
+        };
 
 	jtag_mm0: jtagmm@9040000 {
 		compatible = "qcom,jtagv8-mm";
