--- a/arch/arm64/boot/dts/qcom/trinket-seine-display.dtsi
+++ b/arch/arm64/boot/dts/qcom/trinket-seine-display.dtsi
@@ -46,7 +46,7 @@
 		gpio = <&tlmm 54 0>;
 	};
 
-	sde_dsi_seine_panels: qcom,dsi-display@1008 {
+	sde_dsi_seine_panels: somc,dsi-display@1008 {
 		label = "dsi_panel_somc_seine_cmd";
 		qcom,display-type = "primary";
 
@@ -58,13 +58,13 @@
 					 "shadow_byte_clk0", "shadow_pixel_clk0";
 
 		/* Only one possible panel on CDB/PROD SoMC Seine platform */
-		somc,bootloader-panel-select;
+		somc,bootloader-panel-detect;
 
 		/* This is the active display node */
 		qcom,dsi-display-active;
 	};
 
-	dsi_panel_cmd_display: qcom,dsi-display@1012 {
+	dsi_panel_cmd_display: somc,dsi-display@1012 {
 		compatible = "somc,dsi-display";
 		label = "primary";
 
@@ -103,7 +103,7 @@
 };
 
 &mdss_mdp {
-	connectors = <&sde_wb &mdss_dsi0 &dsi_panel_cmd_display>;
+	connectors = <&sde_wb &dsi_panel_cmd_display>;
 };
 
 /* Disable/remove everything default, we use our own */
