arm64: DT: Seine: Specify reset GPIO and devid for sec_ts
The driver now requests a mandatory reset gpio property
and a recommended devid one: let's declare them.

--- a/arch/arm64/boot/dts/qcom/trinket-seine-touch.dtsi
+++ b/arch/arm64/boot/dts/qcom/trinket-seine-touch.dtsi
@@ -39,5 +39,9 @@
 		sec,stamina_mode_supported = <1>;
 		sec,rejection_area_portrait = <25 150 60 200>;
 		sec,rejection_area_landscape = <150 20 200 60>;
+
+		/* Open Devices specific */
+		somc,touch-rst-gpio = <&tlmm 97 0>;
+		somc,expected-device-id = <0xAC 0x37 0x61>;
 	};
 };
